--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
     <h1>Block 1</h1>
+        <h1>Перший коміт</h1>
+
 {% endblock %}
 
 {% block content_2 %}
