New navbar and some staff from tutorials

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,9 @@
+
 <nav>
-    <ul>
-        <li>Бургери</li>
-        <li>Напої</li>
-        <li>Десерти</li>
+    <ul class = "nav_layout">
+        <li><a href = #><img src = "static/images/burger.png" alt = "burgers"></a></li>
+        <li><a href = #><img src = "static/images/pizza.png" alt = "pizza"></a></li>
+        <li><a href = #><img src = "static/images/drinks.png" alt = "drinks"></a></li>
+        <li><a href = #><img src = "static/images/icecream.png" alt = "ice cream"></a></li>
     </ul>
 </nav>
