--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,9 +1,30 @@
-
 <nav>
-    <ul class = "nav_layout">
-        <li><a href = #><img src = "static/images/burger.png" alt = "burgers"></a></li>
-        <li><a href = #><img src = "static/images/pizza.png" alt = "pizza"></a></li>
-        <li><a href = #><img src = "static/images/drinks.png" alt = "drinks"></a></li>
-        <li><a href = #><img src = "static/images/icecream.png" alt = "ice cream"></a></li>
+    <ul class="nav_layout">
+        <li>
+            <figure>
+                <a href=#><img src="static/images/burger.png" alt="burgers"></a>
+                <figcaption>Burger</figcaption>
+            </figure>
+        </li>
+        <li>
+            <figure>
+                <a href=#><img src="static/images/pizza.png" alt="pizza"></a>
+                <figcaption>Pizza</figcaption>
+            </figure>
+        </li>
+        <li>
+            <figure>
+                <a href=#><img src="static/images/drinks.png" alt="drink"></a>
+                <figcaption>Drinks</figcaption>
+            </figure>
+        </li>
+        <li>
+            <figure>
+                <a href=#><img src="static/images/icecream.png" alt="Dessert"></a>
+                <figcaption>Dessert</figcaption>
+
+            </figure>
+        </li>
+
     </ul>
 </nav>
