--- a/templates/static/styles/navbar.css
+++ b/templates/static/styles/navbar.css
@@ -3,11 +3,26 @@
     flex-direction: row;
     list-style: none;
     justify-content: center;
+    padding: 0;
 }
 .nav_layout img{
     width: 50px
 }
 .nav_layout li{
-    width: 60px;
+    width: 21%;
+    margin: 2%;
     height: 60px;
+    background-color: #d3d6ef;
+    padding: 5px;
+    text-align: center;
+    border-radius: 10px;
+}
+.nav_layout li ol{
+    list-style: none;
+}
+.nav_layout li figure{
+    margin: 0;
+}
+.nav_layout li figcaption{
+    margin-top: 20%;
 }
