--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="{% static 'styles/navbar.css'%}">
+    <link rel="stylesheet" href="{% static 'styles/category_icon.css'%}">
+    <link rel="stylesheet" href="{% static 'styles/home-block.css'%}">
+
 
 </head>
 <body>
@@ -14,7 +17,6 @@
     {% block content %}
 
     {% endblock %}
-    <h2>Between</h2>
  {% block content_2 %}
 
     {% endblock %}
