--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Block 1</h1>
-        <h1>Перший коміт</h1>
+    <img src="static/images/burger-title.png" alt="burger item" class="block_main">
+    <ul class="under_block">
+        <li class="left"><h3>American cheese</h3>
+            <p>$15 <span class="category-title">Burger</span></p>
+        </li>
+        <li class="plus">
+            <a href="#">+</a>
+        </li>
+    </ul>
 
 {% endblock %}
 
 {% block content_2 %}
-    <h1>Block 2</h1>
-    <h3> Roman </h3>
+    <img src="static/images/pizza-title.png" alt="pizza item" class="block_main">
+    <ul class="under_block">
+        <li class="left"><h3>Four season</h3>
+            <p>$23 <span class="category-title">Pizza</span></p>
+        </li>
+        <li class="plus">
+            <a href="#">+</a>
+        </li>
+    </ul>
 {% endblock %}
