--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,4 +1,7 @@
 <nav>
+
+
+    <p><img src="static/images/category.png" alt = "category" class = "category_icon">Categories</p>
     <ul class="nav_layout">
         <li>
             <figure>
